@@ -24,6 +24,12 @@ J30="30"
 J50="50"
 J100="100"
 
+JH1="h1"
+JH2="h2"
+JH3="h3"
+JH4="h4"
+JH5="h5"
+
 JADMINISTRATION="Administration"
 JADMINISTRATOR="Administrator"
 JALL="All"
