@@ -67,12 +67,6 @@ MOD_ARTICLES_CATEGORY_FIELD_SHOWONARTICLEPAGE_DESC="Select to Show or Hide Artic
 MOD_ARTICLES_CATEGORY_FIELD_SHOWONARTICLEPAGE_LABEL="Show on Article Page"
 MOD_ARTICLES_CATEGORY_FIELD_STARTDATE_DESC="If Date Range is selected above, please enter a Starting Date."
 MOD_ARTICLES_CATEGORY_FIELD_STARTDATE_LABEL="Start Date Range"
-MOD_ARTICLES_CATEGORY_H1="h1"
-MOD_ARTICLES_CATEGORY_H2="h2"
-MOD_ARTICLES_CATEGORY_H3="h3"
-MOD_ARTICLES_CATEGORY_H4="h4"
-MOD_ARTICLES_CATEGORY_H5="h5"
-MOD_ARTICLES_CATEGORY_H6="h6"
 MOD_ARTICLES_CATEGORY_OPTION_ASCENDING_VALUE="Ascending"
 MOD_ARTICLES_CATEGORY_OPTION_CREATED_VALUE="Created"
 MOD_ARTICLES_CATEGORY_OPTION_DATERANGE_VALUE="Date Range"
