@@ -5,7 +5,7 @@
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
 MOD_ARTICLES_NEWS="Articles - Newsflash"
-MOD_ARTICLES_NEWS_FIELD_CATEGORY_DESC="Select Article Category"
+MOD_ARTICLES_NEWS_FIELD_CATEGORY_DESC="Select Articles from a specific Category or a set of Categories."
 MOD_ARTICLES_NEWS_FIELD_IMAGES_DESC="Display Article images"
 MOD_ARTICLES_NEWS_FIELD_IMAGES_LABEL="Show Images"
 MOD_ARTICLES_NEWS_FIELD_ITEMS_DESC="The number of articles to display within this module"
@@ -18,11 +18,6 @@ MOD_ARTICLES_NEWS_FIELD_SEPARATOR_DESC="Show separator after last article"
 MOD_ARTICLES_NEWS_FIELD_SEPARATOR_LABEL="Show last separator"
 MOD_ARTICLES_NEWS_FIELD_TITLE_DESC="Show/hide article title"
 MOD_ARTICLES_NEWS_FIELD_TITLE_LABEL="Show Article Title"
-MOD_ARTICLES_NEWS_H1="h1"
-MOD_ARTICLES_NEWS_H2="h2"
-MOD_ARTICLES_NEWS_H3="h3"
-MOD_ARTICLES_NEWS_H4="h4"
-MOD_ARTICLES_NEWS_H5="h5"
 MOD_ARTICLES_NEWS_READMORE="Read more..."
 MOD_ARTICLES_NEWS_READMORE_REGISTER="Register to Read More"
 MOD_ARTICLES_NEWS_TITLE_HEADING="Header Level"
