@@ -18,11 +18,6 @@ MOD_ARTICLES_NEWS_FIELD_SEPARATOR_DESC="Show separator after last article"
 MOD_ARTICLES_NEWS_FIELD_SEPARATOR_LABEL="Show last separator"
 MOD_ARTICLES_NEWS_FIELD_TITLE_DESC="Show/hide article title"
 MOD_ARTICLES_NEWS_FIELD_TITLE_LABEL="Show Article Title"
-MOD_ARTICLES_NEWS_H1="h1"
-MOD_ARTICLES_NEWS_H2="h2"
-MOD_ARTICLES_NEWS_H3="h3"
-MOD_ARTICLES_NEWS_H4="h4"
-MOD_ARTICLES_NEWS_H5="h5"
 MOD_ARTICLES_NEWS_READMORE="Read more..."
 MOD_ARTICLES_NEWS_READMORE_REGISTER="Register to Read More"
 MOD_ARTICLES_NEWS_TITLE_HEADING="Header Level"
